# rust-tcp-srv

./: Cargo.toml  Readme.md  ab_results.txt  load-test.sh  test.sh
src/: config.rs  connection.rs  lib.rs  logger.rs  main.rs  server.rs
src/http/: files.rs  handler.rs  middleware.rs  mime.rs  mod.rs  request.rs  response.rs  routes.rs
src/static/: index.html
