[package]
name = "rust-tcp-srv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kqueue = "1.0.8"
tokio = { version = "1", features = ["full"] }
bytes = "1"
once_cell = "1.20.2"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sha2 = "0.10"
rust-embed = "8.5.0"
flate2 = "1.0.35"
